fix logic function update lecture